fixed error that option not showing on mobile view

--- a/src/components/order/Section.css
+++ b/src/components/order/Section.css
@@ -94,4 +94,8 @@
     font-weight: lighter;
     line-height: 22px;
   }
+  .customize-tab{
+    display:none;
+  }
+
 }
